--- a/ecommerce/templates/app.ecommerce.support.email.html
+++ b/ecommerce/templates/app.ecommerce.support.email.html
@@ -242,7 +242,7 @@
                                 <div class="" align='left' style="margin-top: -100px;">
                                   <p style="padding-left:15px;padding-top:15px"><strong>Hi,</strong></p>
                                   <p style="margin-bottom:10px;margin-top:0px;padding-left:15px">
-                                  {{response}}
+                                  {{response|safe}}
                                   </p>
                                 </div>
                             </td>
