--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -622,6 +622,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.3.4/tinymce.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-chart.js/0.8.8/angular-chart.min.js"></script>
   {% else %}
   <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
   <script src="{% static 'js/jquery.cookie-1.4.1.min.js' %}"></script>
@@ -631,6 +633,8 @@
   <script src="{% static 'js/tinymce.min.js' %}"></script>
   <!-- <script src="{% static 'js/agency.js' %}"></script> -->
   <script src="{% static 'js/angular-ui-router.min.js' %}"></script>
+  <script src="{% static 'js/Chart.min.js' %}"></script>
+  <script src="{% static 'js/angular-chart.min.js' %}"></script>
   {% endif %}
   <script src="{% static 'js/angular-flash.js' %}"></script>
   <script src="{% static 'js/ng-tinymce.js' %}"></script>
