--- a/homepage/templates/customerHome.html
+++ b/homepage/templates/customerHome.html
@@ -37,7 +37,8 @@
       </div>
     </div>
     <div class="card" style="min-height:72vh; margin-bottom:0px;" ui-view>
-
+      <div ng-include="'/static/ngTemplates/app.customer.dashboardGraph.html'">
+      </div>
     </div>
   </div>
 </div>
