--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -61,7 +61,7 @@
         <!-- Logo -->
         <!-- ============================================================== -->
         <div class="navbar-header">
-          <a class="navbar-brand" href="/customerhome">
+          <a class="navbar-brand" href="/customer/home">
             <!-- Logo icon -->
             <b>
               <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
@@ -358,8 +358,8 @@
         <!-- Sidebar navigation-->
         <nav class="sidebar-nav">
           <ul id="sidebarnav">
-            <li class="nav-small-cap">PERSONAL</li>
-            <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Dashboard </span></a>
+            <!-- <li class="nav-small-cap">PERSONAL</li> -->
+            <!-- <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Dashboard </span></a>
               <ul aria-expanded="false" class="collapse">
                 <li><a href="index.html">Dashboard 1</a></li>
                 <li><a href="index2.html">Dashboard 2</a></li>
@@ -368,16 +368,16 @@
                 <li><a href="index5.html">Dashboard 5</a></li>
                 <li><a href="index6.html">Dashboard 6</a></li>
               </ul>
-            </li>
-            <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-laptop-windows"></i><span class="hide-menu">Template Demos</span></a>
+            </li> -->
+            <!-- <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-laptop-windows"></i><span class="hide-menu">Template Demos</span></a>
               <ul aria-expanded="false" class="collapse">
                 <li><a href="../minisidebar/index.html">Minisidebar</a></li>
                 <li><a href="../horizontal/index2.html">Horizontal</a></li>
                 <li><a href="../dark/index3.html">Dark Version</a></li>
                 <li><a href="../material-rtl/index4.html">RTL Version</a></li>
               </ul>
-            </li>
-            <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-bullseye"></i><span class="hide-menu">Apps</span></a>
+            </li> -->
+            <!-- <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-bullseye"></i><span class="hide-menu">Apps</span></a>
               <ul aria-expanded="false" class="collapse">
                 <li><a href="app-calendar.html">Calendar</a></li>
                 <li><a href="app-chat.html">Chat app</a></li>
@@ -386,15 +386,15 @@
                 <li><a href="app-contact2.html">Contact Grid</a></li>
                 <li><a href="app-contact-detail.html">Contact Detail</a></li>
               </ul>
-            </li>
-            <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-email"></i><span class="hide-menu">Inbox</span></a>
+            </li> -->
+            <!-- <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-email"></i><span class="hide-menu">Inbox</span></a>
               <ul aria-expanded="false" class="collapse">
                 <li><a href="app-email.html">Mailbox</a></li>
                 <li><a href="app-email-detail.html">Mailbox Detail</a></li>
                 <li><a href="app-compose.html">Compose Mail</a></li>
               </ul>
-            </li>
-            <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-chart-bubble"></i><span class="hide-menu">Ui Elements</span></a>
+            </li> -->
+            <!-- <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-chart-bubble"></i><span class="hide-menu">Ui Elements</span></a>
               <ul aria-expanded="false" class="collapse">
                 <li><a href="ui-cards.html">Cards</a></li>
                 <li><a href="ui-user-card.html">User Cards</a></li>
@@ -423,14 +423,14 @@
                 <li><a href="ui-date-paginator.html">Date-paginator</a></li>
                 <li><a href="ui-dragable-portlet.html">Dragable Portlet</a></li>
               </ul>
-            </li>
-            <li class="nav-devider"></li>
+            </li> -->
+            <!-- <li class="nav-devider"></li> -->
             <li class="nav-small-cap">Support</li>
             <li ng-click="$state.go('reviews')" > {{state}} <a class="waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Review</span></a></li>
             <li ng-click="$state.go('settings')" > <a class="waves-effect waves-dark" aria-expanded="false"><i class="ti-settings"></i><span class="hide-menu">Settings</span></a></li>
             <li ng-click="$state.go('knowledgeBase')" > <a class="waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-file"></i><span class="hide-menu">Knowledge Base</span></a></li>
             <li class="nav-devider"></li>
-            <li class="nav-small-cap">FORMS, TABLE &amp; WIDGETS</li>
+            <!-- <li class="nav-small-cap">FORMS, TABLE &amp; WIDGETS</li>
             <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-file"></i><span class="hide-menu">Forms</span></a>
               <ul aria-expanded="false" class="collapse">
                 <li><a href="form-basic.html">Basic Forms</a></li>
@@ -566,7 +566,7 @@
                 </li>
                 <li><a href="#">item 1.4</a></li>
               </ul>
-            </li>
+            </li> -->
           </ul>
         </nav>
         <!-- End Sidebar navigation -->
