--- a/homepage/templates/customerHome.html
+++ b/homepage/templates/customerHome.html
@@ -9,9 +9,9 @@
   <div class="container-fluid">
     <div class="row page-titles">
       <div class="col-md-5 col-8 align-self-center">
-        <h3 class="text-themecolor">Dashboard</h3>
+        <h3 class="text-themecolor"><a href="/customer/home" style="text-decoration:none; color: inherit;">Dashboard</a></h3>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
+          <li class="breadcrumb-item"><a href="/customer/home">Home</a></li>
           <li class="breadcrumb-item active">{{state}}</li>
         </ol>
       </div>
