--- a/homepage/templates/registration.html
+++ b/homepage/templates/registration.html
@@ -201,9 +201,9 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-md-12">
+                      <!-- <div class="col-md-12">
                         <span class="help-text">Password Should Contains Minimum 6 Characters( Atleast 1Capital Letter , 1Small Letter, 1Number )</span>
-                      </div>
+                      </div> -->
                     </div>
 
 
