--- a/static_shared/css/custom/base.css
+++ b/static_shared/css/custom/base.css
@@ -885,8 +885,8 @@ body {
 		content: counters(item, ".") " "; counter-increment: item
 		}
 		.versions .active{
-		  background-color:   #3e72d9;
+		  background-color:   #ffb22b;
 		}
 		.versions button:hover{
-		  background-color:   #3e72d9;
+		  background-color:   #ffb22b;
 		}
