--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -43,7 +43,7 @@
       <button style="margin-bottom:20px;" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 
       <a style="color:black;" href="/accounts/password/reset/">Forgot password?</a><br/>
-      <a style="color:black;" href="registerPage()">New User?</a>
+      <a style="color:black;" href="registerPage">New User?</a>
 
       <!-- <div id="requestOTP" style="width:100px;height:100px;background-color:#0a9199;border-radius:50px; padding-top:10px;margin:auto;margin-top:50px;cursor:pointer;" class="text-center">
         <span style="color:white;">
@@ -85,7 +85,7 @@
       <button style="margin-bottom:20px;" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 
       <a style="color:black;" href="/accounts/password/reset/">Forgot password?</a><br/>
-      <a style="color:black;" href="registerPage()">New User?</a>
+      <a style="color:black;" href="registerPage">New User?</a>
 
       <!-- <div id="requestOTP" style="width:100px;height:100px;background-color:#0a9199;border-radius:50px; padding-top:10px;margin:auto;margin-top:50px;cursor:pointer;" class="text-center">
         <span style="color:white;">
