--- a/homepage/templates/registration.html
+++ b/homepage/templates/registration.html
@@ -30,7 +30,7 @@
 
 
 
-<div class="row" style="height:7vh;background-color:white">
+<div class="row" style="background-color:white;border-bottom:solid 2px #eeeeee;padding:10px;">
 
   <div class="col-md-4  col-xs-4 text-right">
     <a href="/" style="cursor:pointer">
@@ -107,7 +107,7 @@
 
 
                   <div ng-if="mode == 'sendingOTP'" style="padding-top:100px;" class="text-center">
-                    <img src="/static/images/tutor/science.gif" alt="">
+                    <img ng-src="'/static/images/tutor/science.gif'" alt="">
                   </div>
 
 
