--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -210,6 +210,7 @@
       <script src="{% static 'js/angular-highlightjs.min.js' %}"></script>
       <script src="{% static 'js/angular.audio.min.js' %}"></script>
       <script src="{% static 'js/rzslider.min.js' %}"></script>
+
       <!-- <script src="{% static 'js/MathJax.js' %}"></script> -->
     {% endif %}
 
@@ -224,6 +225,7 @@
     <script src="{% static 'js/markdown.min.js' %}"></script>
     <script src="{% static 'js/angular-ui-switch.min.js' %}"></script>
     <script src="{% static 'js/jquery.orgchart.min.js' %}"></script>
+    <!-- <script src="{% static 'js/angular-cookies.js' %}"></script> -->
     <!-- Custom JS files -->
     <script type="text/javascript">
       var wampServer = '{{wampServer}}';
