--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -425,10 +425,12 @@
               </ul>
             </li> -->
             <!-- <li class="nav-devider"></li> -->
+            {% verbatim %}
             <li class="nav-small-cap">Support</li>
-            <li ng-click="$state.go('reviews')" > {{state}} <a class="waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Review</span></a></li>
-            <li ng-click="$state.go('settings')" > <a class="waves-effect waves-dark" aria-expanded="false"><i class="ti-settings"></i><span class="hide-menu">Settings</span></a></li>
-            <li ng-click="$state.go('knowledgeBase')" > <a class="waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-file"></i><span class="hide-menu">Knowledge Base</span></a></li>
+            <li class="{{state=='Reviews' ? 'active' : ''}}" ng-click="$state.go('reviews');" > <a class="waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Review</span></a></li>
+            <li class="{{state=='Settings' ? 'active' : ''}}" ng-click="$state.go('settings');" > <a class="waves-effect waves-dark" aria-expanded="false"><i class="ti-settings"></i><span class="hide-menu">Settings</span></a></li>
+            <li class="{{state=='KnowledgeBase' ? 'active' : ''}}" ng-click="$state.go('knowledgeBase')" > <a class="waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-file"></i><span class="hide-menu">Knowledge Base</span></a></li>
+            {% endverbatim %}
             <li class="nav-devider"></li>
             <!-- <li class="nav-small-cap">FORMS, TABLE &amp; WIDGETS</li>
             <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-file"></i><span class="hide-menu">Forms</span></a>
