--- a/static_shared/css/custom/base.css
+++ b/static_shared/css/custom/base.css
@@ -12,6 +12,28 @@
 }
 
 
+/* .abcd ul, ul li {
+-webkit-transform: scaleY(-1);
+   -moz-transform: scaleY(-1);
+    -ms-transform: scaleY(-1);
+     -o-transform: scaleY(-1);
+        transform: scaleY(-1);
+} */
+
+.abcd ul li{
+		transform: rotate(180deg);
+		/* transform: scaleY(-1); */
+}
+
+.abcd ul{
+	margin-bottom: 100px;
+	transform: rotate(180deg);
+  transform-origin: top left;
+	/* transform: scaleY(-1); */
+}
+
+
+
 .basicAppLink :hover , .basicAppLink.active{
   background: var(--themeMain);
   color: white;
