--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -95,10 +95,10 @@
             <!-- ============================================================== -->
             <!-- Search -->
             <!-- ============================================================== -->
-            <li class="nav-item hidden-sm-down search-box"> <a class="nav-link hidden-sm-down text-muted waves-effect waves-dark" href="javascript:void(0)"><i class="ti-search"></i></a>
+            <!-- <li class="nav-item hidden-sm-down search-box"> <a class="nav-link hidden-sm-down text-muted waves-effect waves-dark" href="javascript:void(0)"><i class="ti-search"></i></a>
               <form class="app-search">
                 <input type="text" class="form-control" placeholder="Search & enter"> <a class="srh-btn"><i class="ti-close"></i></a> </form>
-            </li>
+            </li> -->
             <!-- ============================================================== -->
             <!-- Messages -->
             <!-- ============================================================== -->
@@ -249,7 +249,7 @@
             <!-- ============================================================== -->
             <!-- Messages -->
             <!-- ============================================================== -->
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="" id="2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="mdi mdi-email"></i>
                               <div class="notify"> <span class="heartbit"></span> <span class="point"></span> </div>
                           </a>
@@ -260,25 +260,21 @@
                   </li>
                   <li>
                     <div class="message-center">
-                      <!-- Message -->
                       <a href="#">
                         <div class="user-img"> <img src="{% static 'customer/images/1.jpg' %}" alt="user" class="img-circle"> <span class="profile-status online pull-right"></span> </div>
                         <div class="mail-contnet">
                           <h5>Pavan kumar</h5> <span class="mail-desc">Just see the my admin!</span> <span class="time">9:30 AM</span> </div>
                       </a>
-                      <!-- Message -->
                       <a href="#">
                         <div class="user-img"> <img src="{% static 'customer/images/2.jpg' %}" alt="user" class="img-circle"> <span class="profile-status busy pull-right"></span> </div>
                         <div class="mail-contnet">
                           <h5>Sonu Nigam</h5> <span class="mail-desc">I've sung a song! See you at</span> <span class="time">9:10 AM</span> </div>
                       </a>
-                      <!-- Message -->
                       <a href="#">
                         <div class="user-img"> <img src="{% static 'customer/images/3.jpg' %}" alt="user" class="img-circle"> <span class="profile-status away pull-right"></span> </div>
                         <div class="mail-contnet">
                           <h5>Arijit Sinh</h5> <span class="mail-desc">I am a singer!</span> <span class="time">9:08 AM</span> </div>
                       </a>
-                      <!-- Message -->
                       <a href="#">
                         <div class="user-img"> <img src="{% static 'customer/images/4.jpg' %}" alt="user" class="img-circle"> <span class="profile-status offline pull-right"></span> </div>
                         <div class="mail-contnet">
@@ -291,7 +287,7 @@
                   </li>
                 </ul>
               </div>
-            </li>
+            </li> -->
             <!-- ============================================================== -->
             <!-- End Messages -->
             <!-- ============================================================== -->
