--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -37,7 +37,7 @@
 
 
       <label for="username" class="sr-only">Mobile Number</label>
-      <input id="username" name="username" type="text" class="form-control" placeholder="Mobile Number" required autofocus>
+      <input id="username" name="username" type="text" maxlength="10" class="form-control" placeholder="Mobile Number" required autofocus>
     <!--   <input id="otp" name="otp" type="text" class="form-control" placeholder="OTP" required autofocus> -->
       <label for="password" class="sr-only">Password</label>
       <input id="password" name="password" type="password" class="form-control" placeholder="Password" required>
@@ -137,6 +137,7 @@
         } else {
           console.log(id,'kkkkkkkkkkkkkkkkkkkkkkkkk')
           var csrf = $.cookie("csrftoken")
+          console.log();
           $.ajax({
             url: '/generateOTP',
             data: {
