--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -72,7 +72,7 @@
 
 
       <div class="hidden-lg hidden-md bg-blue text-center" style="position:fixed;bottom:0px;width:100%;"  ng-click="checkout()" ng-if="cart.length>0 && !$state.is('checkout') && !$state.includes('account')">
-        <h5 style="color:white;">Checkout ( <i class="fa fa-inr" ></i> {{data.total}} )</h5>
+        <h5 style="color:white;">Checkout ( <i class="fa fa-inr" ></i> {{data.total.toFixed(2)}} )</h5>
       </div>
 
       <div class="hidden-lg hidden-md bg-blue text-center" style="position:fixed;bottom:0px;width:100%;"  ng-click="mainPage()" ng-if="addToCart.length>0&&!me.pk">
