--- a/homepage/templates/registration.lite.html
+++ b/homepage/templates/registration.lite.html
@@ -82,7 +82,7 @@
                           </div>
                           <div class="col-md-10 col-sm-10 col-xs-10">
                             <div class="form-group">
-                              <input onkeydown='return (event.which >= 48 && event.which <= 57) || event.which == 8 || event.which == 46 || event.which == 9 ||( event.which > 94 && event.which <106)'  ng-model="form.mobile" type="text" class="form-control floatInput" required/>
+                              <input onkeydown='return (event.which >= 48 && event.which <= 57) || event.which == 8 || event.which == 46 || event.which == 9 ||( event.which > 94 && event.which <106)'  maxlength="10" ng-model="form.mobile" type="text" class="form-control floatInput" required/>
                               <span class="floating-label">Phone *</span>
                               <p class="help-text text-danger" ng-if="validityChecked == true && (form.mobile.length ==0 || form.mobile == null || form.mobile == undefined) ">Phone number is required</p>
                             </div>
