--- a/static_shared/css/custom/base.css
+++ b/static_shared/css/custom/base.css
@@ -2,6 +2,49 @@
   border-top:6px solid var(--themeMain) !important;
 }*/
 
+
+/* ul.tools {
+    display: none;
+    list-style: none;
+    box-shadow: 0px 0px 4px rgba(0,0,0,.5);
+    border: solid 1px #000;
+    position: absolute;
+    background: #fff;
+		width: 120px;
+}
+ul.tools li {
+    width: 100%;
+    height: 20px;
+    cursor: pointer;
+} */
+
+
+/* The whole thing */
+.custom-menu {
+    display: none;
+    z-index: 1000;
+    position: absolute;
+    background: #FFF;
+    color: #333;
+    padding: 0;
+		width: 120px;
+		border: solid 0.5px #000;
+		border-radius: 5px
+}
+
+/* Each of the items in the list */
+.custom-menu li {
+    padding: 8px 12px;
+    cursor: pointer;
+    list-style-type: none;
+		border-bottom: 1px solid #eee;
+}
+
+.custom-menu li:hover {
+    background-color: #DEF;
+}
+
+
 .zoomOnHover:hover{
 	transform: scale(1.1);
 	/*box-shadow: 2px 2px 10px rgba(7, 131, 184, 1);*/
