email,date filter comment in cst form

--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -31,7 +31,7 @@
   <!-- <link href="{% static 'customer/css/style.css' %}" rel="stylesheet"> -->
   <!-- You can change the theme colors from here -->
   <!-- <link href="{% static 'customer/css/blue.css' %}" id="theme" rel="stylesheet"> -->
-
+  <link rel="stylesheet" href="{% static 'customer/css/plugins/foundation-icons.css' %}" charset="utf-8">
 
   <link href="{% static 'customer/css/style.css' %}" rel="stylesheet">
   <link href="{% static 'customer/css/blue.css' %}" rel="stylesheet">
