--- a/homepage/templates/registration.lite.html
+++ b/homepage/templates/registration.lite.html
@@ -172,5 +172,8 @@
 <script src="{% static 'js/angular-sanitize.min.js' %}"></script>
 <script src="{% static 'js/app.homepage.js' %}"></script>
 <script src="{% static 'js/app.homepage.registration.lite.js' %}"></script>
+<script type="text/javascript">
+   var mobile = "{{mobile}}";
+</script>
 
 {% endblock %}
