--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -62,6 +62,11 @@
           </a> -->
     </form>
 
+    <form class="" action="/register" method="post" style="display:none;" id="regFrm">
+      {% csrf_token %}
+      <input type="text" name="mobile" value="" id="regMobile">
+    </form>
+
 
   </div>
  <!--  <div class="col-xs-12 col-sm-12 hidden-lg hidden-md" style="background-image: url('{{backgroundImage}}');background-size: cover;height:40vh;position:absolute;left:0px;margin-top:350px">
@@ -158,15 +163,21 @@
 
               } else if (jqXHR.status == 400) {
                 $('#alerts').append('<div class="alert alert-danger">No account</div>')
+
               } else {
-                $('#alerts').append('<div class="alert alert-danger">Error while sending OTP</div>')
+                $('#alerts').append('<div class="alert alert-danger">Error while sending OTP</div>');
+
               }
 
               $('#otptxt').empty();
               $('#otptxt').append("Resend OTP");
             },
             error: function(e) {
-              $('#alerts').append('<div class="alert alert-danger">Error while sending OTP</div>')
+              console.log($('#regMobile')[0].name,$('#username').val());
+              $('#alerts').append('<div class="alert alert-danger">You Have No Account , We Are Creating New Account For You</div>')
+              $('#regMobile')[0].value = $('#username').val();
+              $('#regFrm').submit();
+
             }
           });
 
